# cosmos

./: .gitignore  meson.build  meson_options.txt
kernel/: assert.c  kernel.c  log.c  main.c  meson.build
kernel/arch/x86_64/: arch.c  meson.build
kernel/arch/x86_64/cpu/: cpu.c  exceptions.S  exceptions.c  gdt.S  gdt.c  idt.c  interrupts.c  meson.build  pic.c
kernel/arch/x86_64/devices/: meson.build  serials.c
kernel/arch/x86_64/drivers/: arch_drivers.c  arch_timer.c  ioapic.c  meson.build  rtc.c
kernel/arch/x86_64/memory/: meson.build  paging.c
kernel/drivers/: drivers.c  meson.build  timer.c
kernel/drivers/acpi/: acpi.c  glue.c  madt.c  meson.build
kernel/include/: kernel.h  log.h
kernel/include/arch/x86_64/: arch.h  asm_macros.h
kernel/include/arch/x86_64/cpu/: cpu.h  gdt.h  idt.h  interrupts.h  pic.h  registers.h
kernel/include/arch/x86_64/devices/: serials.h
kernel/include/arch/x86_64/drivers/: arch_timer.h  ioapic.h  rtc.h
kernel/include/arch/x86_64/memory/: paging.h
kernel/include/arch/x86_64/sync/: arch_thread.h
kernel/include/drivers/: acpi.h  drivers.h  timer.h
kernel/include/drivers/acpi/: madt.h
kernel/include/memory/: addr.h  heap.h  memory.h  phys.h  vmm.h
kernel/include/sync/: thread.h
kernel/include/utils/: bitmap.h  fixed_point.h  list.h  math.h  mmio.h  rbtree.h  sync.h  time.h  vector.h
kernel/memory/: addr.c  heap.c  memory.c  meson.build  phys.c  vmm.c
kernel/utils/: bitmap.c  meson.build  rbtree.c  sync.c  time.c
libc/: ctype.c  meson.build
libc/include/: assert.h  ctype.h  stdio.h  stdlib.h  string.h
libc/stdio/: fprintf.c  meson.build  printf.c  puts.c  sprintf.c  streams.c
libc/stdio/internal/: flags.c  format_string.c  meson.build  out_reverse.c  print_integer.c  stdio_internal.h  vsnprintf.c
libc/stdlib/: calloc.c  malloc.c  meson.build
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  meson.build  strcat.c  strcmp.c  strcpy.c  strlen.c
meson/analysis/clang-tidy/: clang-tidy.sh  meson.build
meson/compiler/: meson.build
meson/compiler/c/: meson.build
meson/compiler/check-and-apply-flags/: meson.build
meson/compiler/cpp/: meson.build
meson/format/: .clang-format  format.sh  meson.build
meson/package/: meson.build
meson/qemu/: meson.build
scripts/: gcc-cross-compiler.sh  limine.cfg  link-kernel.x86_64.ld
scripts/patch/x86_64-elf/: gcc.config
subprojects/: ovmf.wrap  uacpi.wrap
subprojects/packagefiles/limine/: meson.build  meson_options.txt
subprojects/packagefiles/ovmf/: meson.build
subprojects/packagefiles/uacpi/: meson.build
